# dj-rcp

./: Makefile  README.md  example.env  pyproject.toml
conf/docker/: Dockerfile
src/choices/: .pydocstyle.ini  __init__.py  tests.py
src/common/: filters.py  permissions.py
src/common/test/: __init__.py  base.py  matchers.py  runner.py  schemas.py  utils.py
src/common/test/mixins/: __init__.py  failure.py  readonly.py  success.py
src/common/tests/: test_rc_cipher.py
src/common/utils/: rc_cipher.py  unique_file_name.py
src/ratings_central/: __init__.py  apps.py  enums.py  filters.py  importer.py  models.py  serializers.py  views.py
src/ratings_central/migrations/: 0001_initial.py  __init__.py
src/ratings_central/tests/: __init__.py  factories.py  schemas.py  test_clubs.py  test_players.py
src/users/: filters.py  models.py  serializers.py  utils.py  views.py
src/users/migrations/: 0001_initial.py
src/users/templates/users/emails/: welcome_email.html  welcome_email.txt  welcome_email_subject.txt
src/users/tests/: factories.py  schemas.py  test_populate_default_groups.py  test_sessions.py  test_users.py
src/webapp/: settings.py  signals.py  urls.py
src/webapp/management/commands/: setup_skeletons.py
src/webapp/tests/: test_schema.py
